--- a/preview/styles/docs.css
+++ b/preview/styles/docs.css
@@ -63,10 +63,11 @@ section {
 }
 
 .docs-content {
-  width: min(980px,100%);
   display: flex;
   flex-direction: column;
   gap: 5rem;
+  min-width: 0;
+  width: 100%;
 }
 
 .docs-menu-btn {
@@ -98,21 +99,14 @@ section {
     position: fixed;
     top: 0;
     left: -280px;
-
     width: 280px;
     height: 100vh;
-
     overflow-y: auto;
-
     padding: 2rem 1rem;
-
     background: var(--color-surface-2);
     backdrop-filter: var(--blur);
-
     border-right: 1px solid var(--color-border);
-
     transition: left .3s ease;
-
     z-index: 1000;
   }
 
